Fixing overflow-x issue in iOS

--- a/app/assets/stylesheets/helpers/_base.scss
+++ b/app/assets/stylesheets/helpers/_base.scss
@@ -5,6 +5,7 @@
 
 html {
   height: 100%;
+  overflow-x: hidden;
   background: $noise;
 }
 
@@ -14,6 +15,7 @@ body {
 	font-size: 16px; //Em base unit
 	font-size: 100%;
   overflow-x: hidden;
+  position: relative;
   @include font-reg();
 	@include font-smoothing(antialiased);
   transition: margin-top .5s;
